--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ section {
 body {
   line-height: 1;
   background-color: #fff;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 ol,
@@ -165,16 +166,29 @@ a {
 header {
   background-color: #454545;
   color: white;
+  font-size: 17.6px;
 }
 
 nav {
   width: 95%;
   margin: 0 auto;
   padding: 16px 0;
+  justify-content: space-between;
 }
 
-.nav-item-container {
-  width: 67%;
+.nav-item {
+  border-radius: 10px;
+  text-align: center;
+  padding-top: 20px;
+  margin: 0 10px;
+  width: 102px;
+  height: 61px;
+  background-color: rgb(169, 169, 169);
+}
+
+.nav-button {
+  background-color: rgb(129, 128, 128);
+  width: 120px;
 }
 
 .logo {
@@ -188,11 +202,65 @@ nav {
 }
 
 .nav-search {
-  width: 25%;
+  width: 30%;
+}
+
+.nav-search input {
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
 }
 
 .dflex {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+}
+
+.flex-top {
+  align-items: flex-start;
+}
+
+.article-one {
+  height: 94vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  color: #fff;
+}
+
+.article-container {
+  height: 70%;
+  width: 100%;
+  margin-top: 20%;
+}
+
+.article-writer {
+  display: flex;
+}
+
+.article-writer h1 span {
+  font-weight: 300;
+  font-size: 14px;
+  font-style: italic;
+}
+
+.article-container p {
+  width: 80%;
+  margin: 20px auto;
+  font-size: 40px;
+}
+
+.article-one img {
+  width: 86px;
+  height: 96px;
+  margin-left: 10%;
+  transform: rotate(-15deg);
+  border-radius: 10px;
+}
+
+.one {
+  background-color: rgb(169, 169, 169);
+}
+
+.two {
+  background-color: rgb(129, 128, 128);
 }
