--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,10 @@ nav {
   align-items: flex-start;
 }
 
+.article-grid {
+  position: relative;
+}
+
 .article-one {
   height: 94vh;
   display: grid;
@@ -263,4 +267,51 @@ nav {
 
 .two {
   background-color: rgb(129, 128, 128);
+}
+
+.position-div {
+  position: absolute;
+  top: 10%;
+  left: 35%;
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+}
+
+.position-div p {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 40px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.position-div p span {
+  background-color: #fff;
+}
+
+.position-div i {
+  font-size: 40px;
+  background-color: #fff;
+  border-radius: 10px;
+  transform: rotate(-15deg);
+}
+
+.contrast-button {
+  width: 25%;
+  display: flex;
+  height: 40px;
+}
+
+.position-div button {
+  margin-left: 10px;
+  height: 100%;
+  width: 75%;
+  border: 4px solid #E6E6E6;
+  border-radius: 7px;
+  background-color: #fff;
+}
+
+.fa-long-arrow-right {
+  margin-left: 10%;
+  padding-top: 60px;
 }
