--- a/css/style.css
+++ b/css/style.css
@@ -124,9 +124,8 @@ section {
 
 body {
   line-height: 1;
-  background-color: #fff;
   font-family: "Nunito Sans", sans-serif;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 /* ol,
@@ -162,6 +161,12 @@ a {
   cursor: pointer;
   text-decoration: none;
   color: inherit;
+}
+
+footer img {
+  width: 100px;
+  height: 130px;
+  border-radius: 10px;
 }
 
 /* header */
@@ -315,7 +320,7 @@ nav {
   margin-left: 10px;
   height: 100%;
   width: 75%;
-  border: 4px solid #E6E6E6;
+  border: 4px solid #e6e6e6;
   border-radius: 7px;
   background-color: #fff;
 }
@@ -326,10 +331,10 @@ nav {
   color: #fff;
 }
 
-.second-article-container{
+.second-article-container {
   width: 100%;
   padding-top: 30px;
-  background-color: rgb(211, 208, 208)
+  background-color: rgb(211, 208, 208);
 }
 
 .third-article-container {
@@ -337,7 +342,7 @@ nav {
   margin: 0 auto;
   display: flex;
   padding-top: 30px;
-  background-color:  rgb(233, 231, 231);
+  background-color: rgb(233, 231, 231);
   color: white;
 }
 
@@ -346,9 +351,9 @@ nav {
   height: 90vh;
 }
 
-.article-flex1-items{
+.article-flex1-items {
   width: 90%;
-  margin: 10px auto; 
+  margin: 10px auto;
 }
 
 .article-flex1 h1 {
@@ -374,6 +379,7 @@ nav {
 .span {
   font-size: 16px;
 }
+
 .article-flex2-item2 img {
   width: 250px;
   height: 290px;
@@ -389,7 +395,7 @@ nav {
   height: 50vh;
   border-radius: 10px;
   text-align: center;
-  background-color:  rgb(173, 172, 172);
+  background-color: rgb(173, 172, 172);
 }
 
 .article-flex2-item2 {
@@ -397,14 +403,14 @@ nav {
   height: 90vh;
   border-radius: 10px;
   text-align: center;
-  background-color:  rgb(83, 82, 82);
+  background-color: rgb(83, 82, 82);
 }
 
 .article-flex2-item3 {
   margin-right: 2.5%;
   margin-left: 2.5%;
   height: 90vh;
-  background-color:  rgb(189, 186, 186);
+  background-color: rgb(189, 186, 186);
 }
 
 .article-flex2-item1 img {
@@ -475,7 +481,7 @@ nav {
   height: 95vh;
   width: 95%;
   margin: 30px auto 30px;
-  background-color: rgb(128,128,128);
+  background-color: rgb(128, 128, 128);
   border-radius: 10px;
   color: #fff;
 }
@@ -500,6 +506,11 @@ nav {
   width: 60%;
   padding: 30px 0;
   margin: 0 auto;
+}
+
+.article-class-six p {
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .article-class-five p:nth-child(1) {
@@ -533,11 +544,6 @@ nav {
   margin-bottom: 10px;
 }
 
-.article-class-six p {
-  font-size: 18px;
-  margin-bottom: 10px;
-}
-
 .article-class-six article {
   margin: 20px 20px;
 }
@@ -559,11 +565,10 @@ nav {
 .article-six-img-lrg {
   height: 150px;
   width: 150px;
-
 }
 
 .article-class-six-cards {
-  width: 50%
+  width: 50%;
 }
 
 .article-six-img-sml {
@@ -586,8 +591,6 @@ nav {
   height: 400px;
   background-color: rgb(235, 233, 233);
 }
-
-
 
 .article-seven-items {
   width: 70%;
@@ -689,12 +692,6 @@ footer li {
   font-size: 20px;
 }
 
-footer img {
-  width: 100px;
-  height: 130px;
-  border-radius: 10px;
-}
-
 .ftr-flex-div {
   width: 95%;
   margin: 30px auto 0;
@@ -712,7 +709,7 @@ footer img {
 /** state **/
 
 .nav-item:hover {
-  background-color: rgb(128,128,128);
+  background-color: rgb(128, 128, 128);
 }
 
 .contrast-logo:hover {
